--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,28 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: Roboto;
 }
 
+.container {
+    width: 960px;
+    height: auto;
+    margin: 60px auto;
+}
+
+.list {
+    width: 600px;
+    height: auto;
+    padding: 10px 0;
+}
+.list_link a {
+    font-size: 14px;
+    color: #010101;
+
+}
+.list_title {
+    padding: 5px 0;
+}
+.list_title a {
+    font-size: 20px;
+}
