--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Roboto;
+    /* font-family: Roboto; */
 }
 
 .container {
@@ -18,6 +18,7 @@
 .list_link a {
     font-size: 14px;
     color: #010101;
+    font-family: Arial;
 
 }
 .list_title {
